# obs-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  config.yaml  docker-compose.yml  project_manifest.json  pyproject.toml
chat_app/: __init__.py  a2a_protocol.py  action_engine.py  action_handler.py  activity_timeline.py  adaptive_integration.py  adaptive_rag.py  admin_api.py  admin_api_data.py  admin_collections_routes.py  admin_config_helpers.py  admin_config_routes.py  admin_containers.py  admin_dashboard_routes.py  admin_data_sources_routes.py  admin_interactive_tools_data.py  admin_interactive_tools_routes.py  admin_learning_ext_routes.py  admin_learning_routes.py  admin_network_routes.py  admin_observability_routes.py  admin_operations_routes.py  admin_operations_routes_ext.py  admin_operations_routes_ext2.py  admin_pages_routes.py  admin_security_audit_routes.py  admin_security_infra_routes.py  admin_security_routes.py  admin_settings_routes.py  admin_shared.py  admin_skills_orchestration_routes.py  admin_skills_routes.py  admin_skills_workflow_routes.py  admin_tools.py  admin_tools_impl.py  admin_tools_routes.py  admin_tools_routes_ext.py  admin_tools_routes_ext2.py  admin_upgrade_platform_routes.py  admin_upgrade_routes.py  (+267 more)
cli/: obsai  obsai_cli.py
config/: app.yaml  database.yaml  directories.yaml  features.yaml  ingestion.yaml  knowledge_graph.yaml  llm.yaml  mcp_gateway.yaml  orchestration.yaml  organization.yaml  retrieval.yaml  security.yaml  upgrade_readiness.yaml
containers/: __init__.py
docker_files/: .env.template  Dockerfile.app  Dockerfile.app.no_mounts  Dockerfile.chromadb  Dockerfile.chromadb-prebuilt  Dockerfile.finetune  Dockerfile.ingest  Dockerfile.nginx  Dockerfile.ollama  Dockerfile.postgres  Dockerfile.search_opt  Dockerfile.splunk-validator  build_all.sh  build_with_documents.sh  check_chroma.sh  delete_collections.sh  entrypoint.app.sh  entrypoint.ollama.sh  manage_users.sh  predownload_all_docs.sh  predownload_all_docs_auto.sh  prepare_ingest_docs.sh  reindex_all.sh  run_finetune.sh  run_ingest_qa.sh  start_all.sh  stop_all.sh
docs/: ARCHITECTURE_DECISIONS.md  FINE_TUNING_GUIDE.md  QA_DATASET_GENERATION.md  SSL_SETUP.md  api.md  (+10 more)
(+594 files in other folders)
